--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,69 @@
 * {
   --color-canvas-subtle: #252525;
   --color-canvas-default: #444444;
+  --color-code-background: #4c566a;
 }
 .markdown-body {
   overflow: auto;
+}
+
+.markdown-body {
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.25em;
+  }
+  h4 {
+    font-size: 1em;
+  }
+  h5 {
+    font-size: 0.875em;
+  }
+  h6 {
+    font-size: 0.75em;
+  }
+
+  p, blockquote ul, ol, dl, table, pre, details {
+    margin-bottom: 1rem;
+  }
+
+  pre > code {
+    display: block;
+    font-size: 0.875em;
+    line-height: 1.5em;
+    padding: 1em;
+    background-color: var(--color-code-background);
+  }
+
+  ul, ol {
+    padding-left: 2em;
+  }
+  ul {
+    list-style-type: circle;
+  }
+  ol {
+    list-style-type: decimal;
+  }
+
+  blockquote {
+    font-size: 0.875em;
+    padding: 1em;
+    
+    border-left: 0.25em solid white;
+    background-color: var(--color-canvas-default);
+  }
+
+  a {
+    color: #81a1c1;
+    text-decoration: underline;
+  }
 }
