--- a/static/styles.css
+++ b/static/styles.css
@@ -3,23 +3,31 @@
 @import "tailwindcss/utilities";
 
 @font-face {
-  font-family: 'SourceSerif4';
+  font-family: 'Inter';
+  src: url('/fonts/Inter-VariableFont_opsz,wght.ttf');
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/Inter-Italic-VariableFont_opsz,wght.ttf');
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Source Serif 4';
   src: url('/fonts/SourceSerif4-VariableFont_opsz,wght.ttf');
 }
 
 @font-face {
-  font-family: 'SourceSerif4Italic';
+  font-family: 'Source Serif 4';
   src: url('/fonts/SourceSerif4-Italic-VariableFont_opsz,wght.ttf');
+  font-style: italic;
 }
 
 @layer base {
   html {
-    font-family: "SourceSerif4";
+    font-family: "Inter";
     font-weight: 300;
-  }
-
-  em, i {
-    font-family: 'SourceSerif4Italic';
   }
 }
 
@@ -29,6 +37,8 @@
   --color-code-background: #4c566a;
 }
 .markdown-body {
+  font-family: "Source Serif 4";
+  font-weight: 300;
   overflow: auto;
 }
 
